# velaudapp-recorder

./: .gitignore  FIXES_SUMMARY.md  README.md  app.json  package-lock.json  package.json  react-native.config.js
.github/workflows/: build.yml
android/: build.gradle  gradle.properties  gradlew  settings.gradle  settings.gradle.kts
android/app/: build.gradle  proguard-rules.pro  velaud-release.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/facebook/react/: PackageList.kt
android/app/src/main/java/com/recvelaud/android/: CrashActivity.kt  MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/recvelaud/android/modules/: FloatingPanelModule.kt  FloatingPanelPackage.kt  LiveChatModule.kt  LiveChatPackage.kt  LiveStreamModule.kt  LiveStreamPackage.kt  RecorderModule.kt  (+8 more)
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_bg.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: file_paths.xml
frontend/: .gitignore
src/: App.tsx
src/components/: FloatingChatPanel.tsx
src/modules/: LiveChatModule.ts  LiveStreamModule.ts  RecorderModule.ts  SettingsManager.ts  VideoEditorModule.ts  VideoLibraryModule.ts  i18n.ts
src/navigation/: AppNavigator.tsx
src/screens/: HomeScreen.tsx  LiveStreamScreen.tsx  RecordingPreviewScreen.tsx  SettingsScreen.tsx  VideoEditorScreen.tsx  VideosScreen.tsx
src/theme/: colors.ts  fonts.ts
(+2 files in other folders)
